--- a/week3/loops.html
+++ b/week3/loops.html
@@ -133,10 +133,10 @@
             <script>
                 // Code for Q7
                 let userName = prompt("What is your name?").toUpperCase();
-                while (userName.substr(0,5) !== "YOUR "){
+                while (userName !== "JINSOO SON"){
                     userName = prompt("what is your name?").toUpperCase();
                 }
-                console.log(`Hello ${userName.substr(5,userName.length-1)}`);
+                console.log(`Hello ${userName}`);
             </script>
 
             <li><em>While Loop 2</em>
