--- a/week5/4_functions_events_others.html
+++ b/week5/4_functions_events_others.html
@@ -54,10 +54,10 @@
         		<script>
                     const log = (a) => console.log(a);
         			// OTHER FUNCTIONS
-                    const myFunc = (para) => {
-                        return para
+                    const myFunc = (para) = (param) => {
+                        return para.param
                     }
-                    log(myFunc("hello")); 
+                    log(myFunc("string",length)); 
         		</script>
         	</li>
 
@@ -83,7 +83,6 @@
                     const button2 = document.getElementById("button2")
                     const button3 = document.getElementById("button3")
                     const button4 = document.getElementById("button4")
-                    document.getElementById()
                     button1.onclick = function (event) {
                     }
                     button2.onclick = function (event){
